# RustFractal

./: Cargo.toml  LICENSE  README.md  serial_4096_10_steps.txt  serial_4096_10_steps_desktop.txt  serial_4096_10_steps_desktop_rand.txt  serial_8192_10_steps.txt  test.txt
src/: lib.rs  main.rs
src/fractal/: mod.rs
src/mutex_grid/: mod.rs
src/my_grid/: atomic_grid.rs  mod.rs  sprs_grid.rs
