[package]
name = "RustFractal"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
image = "0.25.2"
num-traits = "0.2.19"
postcard = { version = "1.0.10", features = ["use-std"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
sprs = { version = "0.11.0", features = ["serde"] }

[profile.release]
# debug = true
# lto = true
# codegen-units = 1